Abstract pkg-config in Makefile

--- a/Makefile.config
+++ b/Makefile.config
@@ -235,6 +235,7 @@ XDG_DESKTOP_DIR ?= $(PREFIX)/share/applications
 #########################
 
 CC ?= gcc
+PKG_CONFIG ?= pkg-config
 
 ifeq ($(DEBUG), 1)
 #additional CFLAGS (-g -O0) always added when in debug mode
