Honor $BIN_DIR in desktop and policy files

--- a/po/app.emelfm2.policy.in
+++ b/po/app.emelfm2.policy.in
@@ -27,7 +27,7 @@
    <allow_inactive>auth_admin</allow_inactive>
    <allow_active>auth_admin</allow_active>
   </defaults>
-  <annotate key="org.freedesktop.policykit.exec.path">@PREFIX@/bin/emelfm2</annotate>
+  <annotate key="org.freedesktop.policykit.exec.path">@BIN_DIR@/emelfm2</annotate>
   <annotate key="org.freedesktop.policykit.exec.allow_gui">true</annotate>  
  </action>
 
