--- a/po/emelfm2.desktop.in
+++ b/po/emelfm2.desktop.in
@@ -11,7 +11,7 @@ Comment[ru]=2-панельный файловый менеджер
 Comment[pl]=2-okno menedżer plików
 Comment[zh_CN]=2-面板 文件管理器
 Type=Application
-Exec=@PREFIX@/bin/emelfm2
+Exec=@BIN_DIR@/emelfm2
 TryExec=emelfm2
 Icon=emelfm2
 Terminal=false
