--- a/Makefile.config
+++ b/Makefile.config
@@ -1,8 +1,5 @@
 # $Id: Makefile.config 3085 2015-08-25 05:39:31Z tpgww $
 
-# See also - file INSTALL has further notes about some of the parameters
-# in this file
-
 #####################
 ### documentation ###
 #####################
@@ -109,7 +106,7 @@ EXTRA_BINDINGS ?= 0
 
 # setting this to 1 forces a gtk2 build, particularly relevant to override
 # automatic detection and use of gtk3 build-infrastructure with WITH_LATEST=1
-WITH_GTK2 ?= 0
+WITH_GTK2 ?= 1
 
 # setting this to 1 initiates a 'minimum' build to Gtk v.3.0 standard, instead
 # of v.2.6. Of course, you must have the corresponding development environment
@@ -215,6 +212,13 @@ PROGNAME ?= emelFM2
 #as well as 'make' usage, all in-code uses of these paths assumes they're localised.
 #path variable(s) can safely be altered for installation, e.g. to specify a path for
 #packaging, like $BUILDROOT/usr/local ...
+#NOTE: changing PREFIX affects the default location of the custom icon files.
+#The configuration file (typically ~/.config/emelfm2/config) includes paths for
+#custom icon files, so if you have previously installed emelFM2 with a different
+#PREFIX, the pre-existing config file, even if it has the current version number,
+#will include icon paths which don't match the current PREFIX. The easiest
+#solution for "missing" icon files is to open the emelFM2 configuration dialog,
+#and click the "Default" button.
 PREFIX ?= /usr/local
 BIN_DIR ?= $(PREFIX)/bin
 LIB_DIR ?= $(PREFIX)/lib
