support WAYLAND setting

--- a/Makefile.config
+++ b/Makefile.config
@@ -122,6 +122,12 @@ WITH_LATEST ?= 1
 # deprecated, use WITH_LATEST instead
 USE_LATEST ?= 0
 
+# setting this to 1 disables the widespread protections against concurrent
+# interaction with the display server, which are needed if that server is not
+# threadsafe (this is you, X !!)
+# this setting is ignored on gtk2, which doesn't support wayland
+USE_WAYLAND ?= 0
+
 # setting this to 1 utilises replacement code for command execution. It's known
 # to work reasonably for some (most ?) OS's, but needs further evaluation on linux 2.4
 # (though if it's still a problem there, it's not fatal, just wasteful of CPU cycles)
