--- a/Makefile.config
+++ b/Makefile.config
@@ -122,10 +122,10 @@ WITH_LATEST ?= 1
 # deprecated, use WITH_LATEST instead
 USE_LATEST ?= 0
 
-# setting this to 1 disables the widespread protections against concurrent
-# interaction with the display server, which are needed if that server is not
-# threadsafe (this is you, X !!)
-# this setting is ignored on gtk2, which doesn't support wayland
+# setting this to 1 DISABLES protection against concurrent interaction with the
+# display server. Such protection is mandatory if that server is not threadsafe
+# (this is you, X !!)
+# This setting is ignored on gtk2
 USE_WAYLAND ?= 0
 
 # setting this to 1 utilises replacement code for command execution. It's known
